SERVER-23960 Add error message for index downgrade from 3.4 to 3.2